# SuperPixels

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  SuperPixels.cpp  SuperPixels.h
src/common/: ColorTransforms.h  InputOutput.h  Math.h
